feat: add mise install-skill task
Amp-Thread-ID: https://ampcode.com/threads/T-019c416c-ea0a-77b1-9a54-b0f4b98ec0cf

--- a/mise.toml
+++ b/mise.toml
@@ -34,3 +34,11 @@ rm -rf dist/
 [tasks.check]
 description = "Run all checks (build, test, lint)"
 depends = ["build", "test", "lint"]
+
+[tasks.install-skill]
+description = "Install the Amp skill globally"
+run = """
+mkdir -p ~/.config/agents/skills/notion
+cp skills/notion/SKILL.md ~/.config/agents/skills/notion/SKILL.md
+echo "Installed skill to ~/.config/agents/skills/notion/"
+"""
